--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "artificialblade",
-    "version": "1.0.1",
+    "version": "1.0.0-alpha.1",
     "private": true,
     "scripts": {
         "dev": "next dev",
